# gramd

./: .autotools  .cproject  .project  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  data.cpp  data.h  encoding.cpp  gramd.cpp  libtool  server.h
Debug/: makefile  subdir.mk
Release/: makefile  objects.mk  sources.mk  start.sh  subdir.mk
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: ngrams-2.txt.bz2
src/: Makefile  Makefile.am  Makefile.in  data.cpp  data.h  gramd.cpp  log.h  server.h
src/.deps/: gramd-data.Po  gramd-encoding.Po  gramd-gramd.Po  gramd-log.Po
tools/: data.d  demo.sh  query.txt  start.sh  stop.sh
